--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ body {
 
 
 footer {
-    background-color: black;
-    color: white;
+    background-color: rgb(255, 0, 0);
+    color: rgb(0, 4, 255);
     position: fixed;
     bottom: 0;
     width: 100%;
