--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #DBE4EF;
-    --card-front-color: #c41818;
-    --card-back-color: #07352b;
+    --card-front-color: #1a0aa3;
+    --card-back-color: #770909;
 }
 
 body {
