--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 :root {
-    --text-color: #DBE4EF;
-    --card-front-color: #1a0aa3;
+    --text-color: #000000;
+    --card-front-color: #3474ff;
     --card-back-color: #ffffff;
 }
 
