--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #000000;
     --card-front-color: #3474ff;
-    --card-back-color: #ffffff;
+    --card-back-color: #000000;
 }
 
 body {
