--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 :root {
-    --text-color: #ffffff00;
+    --text-color: #000000;
     --card-front-color: #3474ff;
     --card-back-color: #000000;
 }
