--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color: #ffffff;
-    --card-front-color: #eb1313;
-    --card-back-color: #000000;
+    --text-color: #cf1f1f;
+    --card-front-color: #000000;
+    --card-back-color: #ffffff;
 }
 
 body {
